test/errors/expr_lambda_await_in_async_function.py
async def f(x):
    g = lambda: (await x)
