test/errors/expr_lambda_await_in_async_function.py.expected
test/errors/expr_lambda_await_in_async_function.py:2 error: `await` outside async function
